# feeders-rust

./: .gitignore  Cargo.toml
feeders/: Cargo.toml
feeders/src/: lib.rs  main.rs
vd/: Cargo.toml  NEC Table 9 data.xlsx  build.rs  test.csv
vd/data/: cec-table2.csv  cec-table4.csv  nec-table9.csv
vd/src/: lib.rs
