[package]
name = "feeders"
version = "0.1.0"
authors = ["Matt Wright <mattwright3195@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vd = { path = "../vd" }
actix-web = "3.2.0"
actix-cors = "0.5.1"
async-graphql = "2.1.0"
async-graphql-actix-web = "2.1.0"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "postgres", "uuid" ] }
anyhow = "1.0.34"
serde = { version = "1.0.117", features = ["derive"] }
uuid = "0.8.1"