[package]
name = "feeders"
version = "0.1.0"
authors = ["Matt Wright <mattwright3195@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vd = { path = "../vd" }
actix-web = "3.3.2"
actix-cors = "0.5.3"
async-graphql = "2.4.3"
async-graphql-actix-web = "2.4.3"
sqlx = { version = "0.4.2", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid" ] }
anyhow = "1.0.36"
serde = { version = "1.0.118", features = ["derive"] }
uuid = "0.8.1"
